examples/errors/params_with_same_name.alan
main(): proc
    foo(x: int, x: int): proc
    {
        
    }
{}